# python-trainning

./: git_push.sh
docker/: exam.md
docker/day_01/: Dockerfile  Makefile  entrypoint.sh
docker/day_01/fastapi-app/: Dockerfile  Makefile  entrypoint.sh  main.py  pyproject.toml
docker/day_01/fastapi-app/ops/: api.Dockerfile
docker/day_02/challenge_01/ticketing_system/: Makefile  db.sqlite3  pyproject.toml
docker/day_02/challenge_01/ticketing_system/ticketing_system/: settings.py
docker/day_02/challenge_01/ticketing_system/tickets/: admin.py  forms.py  views.py
docker/day_02/challenge_01/ticketing_system/tickets/templates/: edit_ticket.html  ticket_detail.html
docker/day_02/challenge_01/ticketing_system/tickets/templates/registration/: login.html  not_used_logged_out.html  not_used_logout.html
docker/day_02/fastapi-postgresql-app/: Makefile  Makefile before inspect  app_api_inspect.json  docker-compose before health checks .yaml  docker-compose copy.yaml  docker-compose.yaml
docker/day_02/fastapi-postgresql-app/app/: pyproject.toml
python/: exam.md  exam.py
python/Notebooks/: Dia_02.ipynb  Makefile  dia_01.ipynb  dia_01.txt  pyproject.toml
python/Notebooks/.ipynb_checkpoints/: Dia_02-checkpoint.ipynb  Untitled-checkpoint.ipynb
python/day_01/lab_03/: README.md
python/day_03/lab_10/: lab_10.md
python/day_03/lab_11/: lab_11.md
python/day_05/lab_16/: lab_16.md
python/day_09/challenge_04/: Makefile
python/day_09/challenge_04/app/: account_dispatcher.py
python/day_09/challenge_04/tests/: pyproject.toml  test_account_dispatcher.py
python/day_09/examples/simple_test/: Makefile
python/day_10/lab_30/: pyproject.toml
python/day_10/lab_30/src/: example.csv  main.py  output.txt
python/day_10/lab_31/: pyproject.toml
python/day_10/lab_31/src/: main.py
python/day_10/lab_32/: Dockerfile  Makefile  data.csv  main.ipynb  pyproject.toml
python/day_10/lab_32/.ipynb_checkpoints/: main-checkpoint.ipynb
python/day_11/challenge_05/: Makefile  pyproject.toml  transformed_offers copy.csv
python/day_11/challenge_05/.ipynb_checkpoints/: main-checkpoint.ipynb
python/day_11/challenge_05/auto/: Makefile  process_data.py
python/day_11/lab_33/: Makefile  main.ipynb  pyproject.toml
python/day_11/lab_33/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  main-checkpoint.ipynb
python/day_11/lab_35/: Makefile  main.ipynb  pyproject.toml
python/day_11/lab_35/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  main-checkpoint.ipynb
python/piquenique/src/: main.py
python/project/day01/: day01.py  pyproject.toml
python/project/day01/labs/: lab02.py
python/project/day01/virtual_env/: pyvenv.cfg
python/projects/Generator_decorator_lab19/: sample.txt
python/projects/Generator_decorator_lab19/src/: contexlib.py  file_contex.py  main.py
python/projects/Vir_Envs/poetry/: pyproject.toml
python/projects/comprentions_exe/: pyproject.toml
python/projects/comprentions_exe/src/: challenger.py  challenger_classes.py  main.py
python/projects/context_lab18/: Makefile  pyproject.toml
python/projects/context_lab18/src/: main.py
python/projects/database_lab/: sqlite.db
python/projects/database_lab/migrations/: env.py
python/projects/database_lab/src/: db.py  main.py  main1.py
python/projects/dataclasses/: pyproject.toml
python/projects/dataclasses/src/: data_classes.py
python/projects/django-project/: Makefile  db.sqlite3  demo_tests.py  log.py  pyproject.toml
python/projects/django-project/api/: log.py  serializers.py  views.py
python/projects/django-project/setup/: urls.py
python/projects/django-project/tests/: test_animal.py
python/projects/django-project/unittest/: unit_test_demo.py
python/projects/django-project/website/migrations/: 0001_initial.py
python/projects/django-project/website_old/: admin.py  urls.py
python/projects/django_website/: db.sqlite3  pyproject.toml
python/projects/django_website copy/: db.sqlite3
python/projects/django_website copy/project/: settings.py
python/projects/django_website/pages/: forms.py  models.py  urls.py  views.py
python/projects/django_website/pages/templates/: create_ticket.html  ticket_list.html
python/projects/django_website/project/: settings.py  urls.py
python/projects/django_website_Home/: Makefile  from django.py
python/projects/lambda_functions/: pyproject.toml
python/projects/lambda_functions/src/: lambda_functions.py
python/projects/midleware_api_Django_Rest_Framework/: db.sqlite3  manage.py  pyproject.toml  test-api.http
python/projects/midleware_api_Django_Rest_Framework copy/: db.sqlite3  lab_23.md
python/projects/midleware_api_Django_Rest_Framework copy/api_app/: models.py  serializers.py  urls.py  views.py
python/projects/midleware_api_Django_Rest_Framework copy/api_project/: urls.py
python/projects/midleware_api_Django_Rest_Framework/api_app/: models.py  serializers.py  urls.py  views.py
python/projects/midleware_api_Django_Rest_Framework/api_app/migrations/: 0001_initial.py  0002_task.py  0003_person_task2.py
python/projects/midleware_api_Django_Rest_Framework/api_project/: settings.py  urls.py
python/projects/midleware_django_Rest_framework/: manage.py  urls.py
python/projects/piquenique/: pyproject.toml
python/projects/piquenique/src/: main.py
python/projects/pydantic_lab/: calc.py  lab16.py  lab17_1.py  lab17_2.py  main.py  pydantic.py_  pyproject.toml
python/projects/python-docker-poetry/: Dockerfile  app.py  pyproject.toml
python/projects/python-docker-poetry_click/: Dockerfile  pyproject.toml
python/projects/python-docker-poetry_click/src/: pyproject.toml
python/projects/python-docker-poetry_click_fastCGI/: Dockerfile  _pyproject.toml  main.py  pyproject.toml
python/projects/python-docker-poetry_click_fastCGI/src/: commands.py  main.py
python/projects/terminal_Variables/: Makefile  pyproject.toml
python/projects/ticketing_system/: db.sqlite3
python/projects/ticketing_system - add_Replies/: db.sqlite3
python/projects/ticketing_system-BACKUP16:42/: urls.py
(+50 files in other folders)
