[tool.poetry]
name = "challenge-05"
version = "0.1.0"
description = ""
authors = ["PauloGomesNatixis <paulo.gomes@natixis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
notebook = "^7.2.2"
seaborn = "^0.13.2"
pydantic = "^2.9.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
