[tool.poetry]
name = "comprentions-exe"
version = "0.1.0"
description = ""
authors = ["PauloGomesNatixis <paulo.gomes@natixis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^30.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
