[tool.poetry]
name = "context-lab18"
version = "0.1.0"
description = ""
authors = ["PauloGomesNatixis <paulo.gomes@natixis.com>"]
readme = "README.md"
packages = [
    { include = "./src" },{ include = "*.py" },
]
[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.6.7"
black = "^24.8.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
