[tool.poetry]
name = "piquenique"
version = "0.1.0"
description = ""
authors = ["PauloGomesNatixis <paulo.gomes@natixis.com>"]
readme = "README.md"
packages = [{"include": "./src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
