[tool.poetry]
name = "python-docker-poetry-click-fastcgi"
version = "0.1.0"
description = ""
authors = ["PauloGomesNatixis <paulo.gomes@natixis.com>"]
readme = "README.md"
packages = [
    { include = "./src" },{ include = "*.py" },
]

[tool.poetry.scripts]
hello = "src.commands:hello"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
